updating on header

--- a/Corporate-Landing-Page/index.html
+++ b/Corporate-Landing-Page/index.html
@@ -8,18 +8,20 @@
 <body>
 	<div id="wrapper"> 
 		<header>
-			<h3>Elixir</h3>
+			<div class="logo-and-navigation">
+				<h4>Elixir</h4>
 
-			<nav>
-			 <ul>
-			 	<li>About us</li>
-			 	<li>Services</li>
-			 	<li>Work</li>
-			 	<li>Careers</li>
-			 	<li>Blog</li>
-			 	<li>Contact</li>
-			 </ul>
-			</nav>
+				<nav>
+				 <ul>
+				 	<li><a href="#">About us</a></li>
+				 	<li><a href="#">Services</a></li>
+				 	<li><a href="#">Work</a></li>
+				 	<li><a href="#">Careers</a></li>
+				 	<li><a href="#">Blog</a></li>
+				 	<li><a href="#">Contact</a></li>
+				 </ul>
+				</nav>
+			</div>		
 
 			<div>
 				<header>
