finsh the header

--- a/Corporate-Landing-Page/index.html
+++ b/Corporate-Landing-Page/index.html
@@ -23,17 +23,22 @@
 				</nav>
 			</div>		
 
-			<div>
+			<div class="logo-and-slogan">
 				<header>
 					<h1>Elixir</h1>
 					<p>BE A LEADER IN YOUR FIELD</p>
 				</header>
-				<p>
+				<p class="slogan">
 					There Is No Limit To What You Can Accomplish Using “Elixir Product”
 				</p>
 
+				<p class="get-started">
 				<a href="#">Get Started</a>
+				</p>
+
+				<p class="say-something">
 				<a href="#">Have Something To Say?</a>
+				<p/>
 			</div>
 		</header>
 
