updating on main section

--- a/Corporate-Landing-Page/index.html
+++ b/Corporate-Landing-Page/index.html
@@ -44,55 +44,56 @@
 
 		<main>
 			<header>
-				<h3>Create Performance</h3>
+				<h3>Creative Performance</h3>
 			</header>
 
 			<section class="services">
-			<div>
-				<header>
-				<!--Place img here -->
-					<h5>Many Options</h5>
-				</header>
-				<p>Praesent sed hendrerit ligula. Praesent eros turpis iaculis id gravida eu, consequat viverra odio. Phasellus ac arcu lacus. Sed at nunc feugiat.</p>
-				<a href="#">Read about »</a>
-			</div>
-			
-			<div>
-				<header>
-				<!--Place img here -->
-					<h5>Unlimited Interfaces</h5>
-				</header>
-				<p>Praesent sed hendrerit ligula. Praesent eros turpis iaculis id gravida eu, consequat viverra odio. Phasellus ac arcu lacus. Sed at nunc feugiat.</p>
-				<a href="#">Read about »</a>
-			</div>
+				
+					<div class="options">
+						<header>
+						<div class="logo"></div>
+							<h5>Many Options</h5>
+						</header>
+						<p>Praesent sed hendrerit ligula. Praesent eros turpis iaculis id gravida eu, consequat viverra odio. Phasellus ac arcu lacus. Sed at nunc feugiat.</p>
+						<a href="#">Read about »</a>
+					</div>
+					
+					<div class="interfaces">
+						<header>
+						<div class="logo"></div>
+							<h5>Unlimited Interfaces</h5>
+						</header>
+						<p>Praesent sed hendrerit ligula. Praesent eros turpis iaculis id gravida eu, consequat viverra odio. Phasellus ac arcu lacus. Sed at nunc feugiat.</p>
+						<a href="#">Read about »</a>
+					</div>
 
-			<div>
-				<header>
-				<!--Place img here -->
-					<h5>Fully Documentation</h5>
-				</header>
-				<p>Praesent sed hendrerit ligula. Praesent eros turpis iaculis id gravida eu, consequat viverra odio. Phasellus ac arcu lacus. Sed at nunc feugiat.</p>
-				<a href="#">Read about »</a>
-			</div>	
+					<div class="documentation">
+						<header>
+						<div class="logo"></div>
+							<h5>Fully Documentation</h5>
+						</header>
+						<p>Praesent sed hendrerit ligula. Praesent eros turpis iaculis id gravida eu, consequat viverra odio. Phasellus ac arcu lacus. Sed at nunc feugiat.</p>
+						<a href="#">Read about »</a>
+					</div>	
 			</section>
 
-			<div>
+			<div class="work-together">
 				<p>LET’S WORK TOGETHER</p>
 			</div>
 
-			<section>
+			<section class="work-better">
 				<header>
 					<h3>HOW WE WORK BETTER</h3>
 				</header>
 
 				<div>
-					<img src="" alt="" />
+					<img src="img/flower1.jpg" alt="Flower" />
 					<h5>Meets Our Team</h5>
 					<p>Praesent nec lacinia arcu. Morbi vel enim nec neque vestibulum sagittis vitae et est sed laoreet sem.</p>
 				</div>
 
 				<div>
-					<img src="" alt="" />
+					<img src="img/flower2.jpg" alt="Flower2" />
 					<h5>Meets Our Clients</h5>
 					<p>Praesent nec lacinia arcu. Morbi vel enim nec neque vestibulum sagittis vitae et est sed laoreet sem.</p>
 				</div>
