finishing section and footer

--- a/Corporate-Landing-Page/index.html
+++ b/Corporate-Landing-Page/index.html
@@ -86,6 +86,7 @@
 					<h3>HOW WE WORK BETTER</h3>
 				</header>
 
+
 				<div>
 					<img src="img/flower1.jpg" alt="Flower" />
 					<h5>Meets Our Team</h5>
@@ -99,7 +100,7 @@
 				</div>
 			</section>
 
-			<section>
+			<section class="client-feedback">
 				<header>
 					<h3>SO OUR CLIENTS SAY</h3>
 				</header>
@@ -110,8 +111,8 @@
 			</section>
 		</main>
 		<footer>
-			<p>Designed By M-Elgendy </p>
-			<p>Copyright © 2014 Elixir</p>
+			<p class="design">Designed By M-Elgendy </p>
+			<p class="copy">Copyright &copy; 2014 Elixir</p>
 		</footer>
 	</div>
 </body>
